# zed

./: Cargo.toml
crates/ai/: Cargo.toml
crates/ai/src/: completion.rs  providers.rs
crates/ai/src/providers/candle/: completion.rs  logits_processor.rs  mistral.rs  mod.rs  starcoder2.rs  token_output_stream.rs
crates/ai/src/providers/open_ai/: completion.rs
crates/assistant/src/: assistant_panel.rs  assistant_settings.rs  codegen.rs
