[package]
name = "ai"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/ai.rs"
doctest = false

[features]
test-support = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode = "1.3.3"
candle-core = { git = 'https://github.com/huggingface/candle', rev="cdc4c172c42b5c31b3063afd20cc7055d60f9af8", features = ["metal"] }
candle-metal-kernels =  { git = 'https://github.com/huggingface/candle', rev="cdc4c172c42b5c31b3063afd20cc7055d60f9af8"}
candle-nn = { git = 'https://github.com/huggingface/candle', rev="cdc4c172c42b5c31b3063afd20cc7055d60f9af8", features = ["metal"] }
candle-transformers = { git = 'https://github.com/huggingface/candle', rev="cdc4c172c42b5c31b3063afd20cc7055d60f9af8", features = ["metal"] }
derive-new = "0.6.0"
futures.workspace = true
gpui.workspace = true
hf-hub = "0.3.2"
isahc.workspace = true
language.workspace = true
log.workspace = true
matrixmultiply = "0.3.7"
ordered-float.workspace = true
parking_lot.workspace = true
parse_duration = "2.1.1"
postage.workspace = true
rand.workspace = true
rusqlite = { version = "0.29.0", features = ["blob", "array", "modern_sqlite"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tiktoken-rs.workspace = true
tokenizers = { version = "0.15.2", features = ["http"] }
util.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
